Modified getURL method to fix a failure on Unix where an intended relative path was interpreted as an absolute path (i.e. on Unix only, not on windows).  See WSDL4J Sourceforge tracker 1465927.